# TradingLab

./: .gitignore  Makefile  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/tradingapi/: main.py  main.spec  test.py
backend/tradingapi/api/v1/: backtest_controller.py  stock_controller.py
backend/tradingapi/core/: config.py  context.py  db.py  exceptions.py  initializer.py  logging.py  metrics.py
backend/tradingapi/fetcher/: base.py  interface.py  manager.py
backend/tradingapi/fetcher/datasources/: __init__.py  eastmoney.py  exchange.py  legulegu.py  sina.py  tx.py  xueqiu.py
backend/tradingapi/models/: __init__.py  backtest_result.py  backtest_stats.py  stock_basic_info.py  stock_daily_data.py  stock_industry.py
backend/tradingapi/proxies/: requests_proxies.py
backend/tradingapi/repositories/: __init__.py  backtest_result.py  backtest_stats.py  base.py  stock_basic_info.py  stock_daily_data.py  stock_industry.py
backend/tradingapi/schemas/: backtest.py  response.py  stocks.py  strategy.py
backend/tradingapi/services/: backtest_service.py  backtest_stats_service.py  base.py  stock_daily_service.py  stock_service.py
backend/tradingapi/static/: index.js
backend/tradingapi/static/public/: index.html
backend/tradingapi/strategy/: README.md  __init__.py  base.py  config_manager.py  exceptions.py  manager.py
backend/tradingapi/strategy/config/: __init__.py  base.py  indicators.py  strategies.py
backend/tradingapi/strategy/indicators/: __init__.py  (+5 more)
backend/tradingapi/strategyv2/: README.md  model.py  strategy.py
backend/tradingapi/tasks/: base.py  scheduler.py  stock_basic_task.py  stock_daily_task.py
backend/tradingapi/tests/: test_ai.py
(+138 files in other folders)
