[project]
name = "stock-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.4.5",
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.21.0",
    "akshare>=1.17.31",
    "black>=25.1.0",
    "chinese-calendar>=1.10.0",
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
