[project]
name = "stock-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.21.0",
    "akshare>=1.17.31",
    "apscheduler[asyncio]>=3.11.0",
    "asyncpg>=0.31.0",
    "backtesting>=0.6.5",
    "black>=25.1.0",
    "chinese-calendar>=1.10.0",
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "orjson>=3.11.2",
    "pandera>=0.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scikit-optimize>=0.10.2",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "ta-lib>=0.6.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
